--- a/package.json
+++ b/package.json
@@ -3,24 +3,37 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://nathipg.github.io/site-kaio/",
   "scripts": {
     "dev": "vite",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d dist",
     "build": "vite build",
-    "lint": "eslint .",
+    "lint-check": "eslint .",
+    "lint": "npx eslint --fix .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "i18next": "^25.3.1",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-i18next": "^15.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@stylistic/eslint-plugin": "^4.4.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-sort-exports": "^0.9.1",
+    "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "sass": "^1.89.2",
     "vite": "^6.3.5"
