--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "i18next-http-backend": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-i18next": "^15.6.0"
+    "react-i18next": "^15.6.0",
+    "react-router": "^7.6.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
