--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^19.1.0",
     "react-i18next": "^15.6.0",
     "react-redux": "^9.2.0",
-    "react-router": "^7.6.3"
+    "react-router": "^7.6.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
