--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "vite build",
     "lint-check": "eslint .",
     "lint": "npx eslint --fix .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "firebase-login": "firebase login",
+    "firestore-deploy-rules": "firebase deploy --only firestore:rules -P site-kaio"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -41,6 +43,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "eslint-plugin-sort-exports": "^0.9.1",
+    "firebase-tools": "^14.12.1",
     "gh-pages": "^6.3.0",
     "globals": "^16.0.0",
     "sass": "^1.89.2",
