--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-i18next": "^15.6.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.3",
+    "swiper": "^11.2.10",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
