--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.6.0",
+    "react-quill-new": "^3.6.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.6.3",
     "swiper": "^11.2.10",
